Minor tests stability improvements